--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
 
         if (metadata.picture) {
           const picture = metadata.picture;
-          const base64String = btoa(String.fromCharCode(...new Uint8Array(picture.data)));
+          let base64String;
+          try {
+            base64String = btoa(Array.from(picture.data, byte => String.fromCharCode(byte)).join(''));
+          } catch (e) {
+            console.error('Error converting image data to base64:', e);
+            base64String = '';
+          }
           const img = document.createElement('img');
           img.src = `data:${picture.format};base64,${base64String}`;
           img.style.maxWidth = '200px';
